name:                atom-sally
version:             0.1.0.0
synopsis:            Translator from Atom to Sally
description:         This library is a translator that takes (distributed)
                     Atom specifications and produces transition system models
                     in the Sally (https://github.com/SRI-CSL/sally) input language.

license:             BSD3
license-file:        LICENSE
author:              Benjamin F Jones
maintainer:          bjones@galois.com
copyright:           Galois, Inc. 2016
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:   Language.Sally.Types
                   , Language.Sally.PPrint
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , text >=1.2
                     , wl-pprint-text >=1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
